--- a/NpgSQL.CRUDBuilder/NpgSQL.CRUDBuilder.csproj
+++ b/NpgSQL.CRUDBuilder/NpgSQL.CRUDBuilder.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Domain\StringSearchAlgorithms\EquivalenceSearch" />
+    </ItemGroup>
+
 </Project>
