--- a/NpgSQL.CRUDBuilder/NpgSQL.CRUDBuilder.csproj
+++ b/NpgSQL.CRUDBuilder/NpgSQL.CRUDBuilder.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <AssemblyName>NpgSQL.CRUDBuilder</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
+        <PackageReference Include="Npgsql" Version="5.0.0-alpha1"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Domain\StringSearchAlgorithms\EquivalenceSearch" />
+        <ProjectReference Include="..\NpgSQL.CRUDBuilder.SDK\NpgSQL.CRUDBuilder.SDK.csproj"/>
     </ItemGroup>
-
 </Project>
