--- a/NpgSQL.CRUDBuilder.SDK/NpgSQL.CRUDBuilder.SDK.csproj
+++ b/NpgSQL.CRUDBuilder.SDK/NpgSQL.CRUDBuilder.SDK.csproj
@@ -7,4 +7,8 @@
     <ItemGroup>
       <PackageReference Include="Npgsql" Version="5.0.0-alpha1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\NpgSQL.CRUDBuilder.DataTypes\NpgSQL.CRUDBuilder.DataTypes.csproj" />
+    </ItemGroup>
 </Project>
